Alterados os arquivos para melhor organização e adicionadas as soluções dos problemas restantes do desafio da terceira aula do curso